tests/ui/underscore-lifetime/in-struct.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/in-struct.rs:6:9
   |
LL |     x: &'_ u32,
   |         ^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ struct Foo<'a> {
LL ~     x: &'a u32,
   |

error[E0106]: missing lifetime specifier
  --> $DIR/in-struct.rs:10:14
   |
LL |     Variant(&'_ u32),
   |              ^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ enum Bar<'a> {
LL ~     Variant(&'a u32),
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
